--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
                       <h3 class="card-title fw-bold">{{ weather.city }}</h3>
                       <h4 class="card-title fw-normal">{{ weather.weat }}</h4>
                       <h4 class="card-title fw-normal">temp: {{ weather.temp }}F</h4>
+                      <h4 class="card-title fw-normal">Humidity: {{ weather.humid}}</h4>
                       <h4 class="card-title fst-italic">long: {{weather.cord1 }} lat: {{weather.cord2}}</h4>
                     </div>
                   </div>
